--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <title>Spending Checkpoint</title>
+  <link rel="icon" href="images/penny-logo-16.png" type="image/png">
+  <script src="popup.js" defer></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 10px;
+      width: 200px;
+    }
+    button {
+      padding: 8px 12px;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
+  <h3>Spending Checkpoint</h3>
+  <p><img src="images/penny-logo-32.png" width=80% hight=auto></p>
+  <h4> Before you click <span style="color: green; font-weight: bold;">YES</span> to this purchase...</h4>
+  <p>You could put the amount of money, to your next trip</p>
+  <div><span style="color: red; font-weight: bold">Total:</span> <span id="totalDisplay">Loading...</span></div>
 
+ <button id="refreshBtn">Refresh</button>
+<!--
+  <script>
+    document.getElementById("clickMe").addEventListener("click", () => {
+      alert("Button clicked!");
+    });
+  </script> -->
 </body>
 </html>
